# shadowclaude

./: DEVELOPMENT_PLAN.md  PROJECT.md
docs/: README.md
docs/api/: usage-guide.md
docs/api/python/: reference.md
docs/api/rest/: openapi.md
docs/api/websocket/: protocol.md
docs/architecture/: data-flow.md  detailed-design.md  module-dependencies.md  sequence-diagrams.md  system-design.md  whitepaper.md
docs/development/guidelines/: code-style.md  contributing.md  release-process.md
docs/development/setup/: environment.md
docs/examples/: README.md
docs/examples/advanced/01-multi-agent/: main.py
docs/examples/advanced/02-memory-advanced/: main.py
docs/examples/advanced/03-undercover-mode/: main.py
docs/examples/advanced/04-mcp-server/: main.py
docs/examples/advanced/05-distributed/: main.py
docs/examples/basic/01-hello-world/: README.md  main.py  requirements.txt
docs/examples/basic/02-query-engine/: main.py
docs/examples/basic/03-file-operations/: main.py
docs/examples/basic/04-tool-execution/: main.py
docs/examples/basic/05-memory-basic/: main.py
docs/examples/integrations/01-vscode-extension/: main.py
docs/examples/integrations/02-jupyter-notebook/: main.py
docs/examples/integrations/03-slack-bot/: main.py  requirements.txt
docs/examples/integrations/04-discord-bot/: main.py
docs/examples/integrations/05-telegram-bot/: main.py
docs/i18n/ja/: README.md
docs/i18n/ko/: README.md
docs/i18n/zh/: README.md  user-guide.md
docs/i18n/zh/development/: setup.md
docs/user-guide/: advanced-usage.md  cli-reference.md  faq.md  features.md  migration-guide.md  performance-optimization.md  quickstart.md  security-guide.md  troubleshooting.md
docs/user-guide/configuration/: config-reference.md
docs/user-guide/installation/: README.md
docs/user-guide/tutorials/: README.md
python/: README.md  requirements.txt  setup.py
python/shadowclaude/: __init__.py  __main__.py  query_engine.py
python/shadowclaude/agents/: __init__.py
python/shadowclaude/buddy/: __init__.py
python/shadowclaude/config/: __init__.py
python/shadowclaude/kairos/: __init__.py
python/shadowclaude/memory/: __init__.py
python/shadowclaude/providers/: __init__.py  anthropic.py  base.py  factory.py  llamacpp.py  ollama.py  openai.py
python/shadowclaude/tools/: IMPLEMENTATION_REPORT.md  TOOLS_DOCUMENTATION.md  __init__.py  code_tools.py  database_tools.py  deploy_tools.py  file_tools.py  git_tools.py  network_tools.py  system_tools.py  test_tools.py
python/shadowclaude/undercover/: __init__.py
python/tests/: COMPLETION_REPORT.md  FINAL_REPORT.md  TEST_REPORT.md  __init__.py  conftest.py  conftest_extended.py
python/tests/mocks/: __init__.py
python/tests/mocks/fs/: __init__.py  mock_fs.py
python/tests/mocks/llm/: __init__.py  mock_client.py
python/tests/mocks/network/: __init__.py  mock_http.py
python/tests/test_integration/agent_collaboration/: test_agent_communication.py  test_agent_failure.py  test_multi_agent.py  test_swarm_scale.py
python/tests/test_integration/toolchain/: test_third_party_integration.py  test_tool_integration.py
python/tests/test_integration/web_ui/: test_web_ui_e2e.py
python/tests/test_integration/workflow/: test_api_integration.py  test_configuration.py  test_data_flow.py  test_database_integration.py  test_e2e_workflow.py  test_session_management.py
python/tests/test_performance/benchmark/: test_benchmark.py  test_response_time.py  test_throughput.py
python/tests/test_performance/load/: test_concurrent_load.py  test_load.py  test_resource_contention.py  test_stability.py  test_stress.py
python/tests/test_performance/memory/: test_memory_usage.py
python/tests/test_performance/token/: test_token_usage.py
python/tests/test_security/permission/: test_csrf.py  test_permission_bypass.py
python/tests/test_security/prompt_injection/: test_prompt_injection.py  test_sql_injection.py  test_xss.py
python/tests/test_security/sandbox/: test_command_injection.py  test_deserialization.py  test_file_inclusion.py  test_log_security.py  test_sandbox_escape.py  test_ssrf.py
python/tests/test_unit/agents/: test_agent_boundary.py  test_agent_lifecycle.py  test_coordinator_advanced.py  test_coordinator_basic.py
python/tests/test_unit/memory/: test_episodic_memory.py  test_memory_boundary.py  test_memory_persistence.py  test_memory_system.py  test_semantic_memory.py  test_working_memory.py
python/tests/test_unit/query_engine/: test_query_engine_advanced.py  test_query_engine_basic.py  test_query_engine_boundary.py  test_query_engine_cache.py  test_query_engine_config.py  test_query_engine_errors.py  test_query_engine_performance.py  test_query_engine_stream.py
python/tests/test_unit/tools/: test_file_tools.py  test_tool_boundary.py  test_tool_registry.py  test_tool_validation.py
rust/crates/: IMPLEMENTATION_SUMMARY.md
rust/crates/shadowclaude-core/: Cargo.toml
rust/crates/shadowclaude-core/benches/: cache_benchmark.rs
rust/crates/shadowclaude-core/src/: cache.rs  dialogue.rs  error.rs  lib.rs  message.rs  security.rs  session.rs  types.rs
rust/crates/shadowclaude-ffi/: Cargo.toml
rust/crates/shadowclaude-ffi/src/: async_bindings.rs  bridge.rs  convert.rs  error.rs  extra.rs  lib.rs  types.rs
rust/crates/shadowclaude-protocol/: Cargo.toml
rust/crates/shadowclaude-protocol/benches/: protocol_benchmark.rs
rust/crates/shadowclaude-protocol/src/: error.rs  extra.rs  lib.rs  mcp.rs  message.rs  serde.rs  testing.rs  websocket.rs
rust/crates/shadowclaude-runtime/: Cargo.toml
rust/crates/shadowclaude-runtime/src/: concurrency.rs  executor.rs  lib.rs  scheduler.rs  task.rs  timeout.rs
web/ui/: .gitignore  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/ui/src/: App.tsx
web/ui/src/components/: AgentPanel.tsx  Chat.tsx  CodeEditor.tsx  FileBrowser.tsx  Layout.tsx  Terminal.tsx  ToolVisualizer.tsx  index.ts
web/ui/src/hooks/: useWebSocket.ts
web/ui/src/stores/: appStore.ts
web/ui/src/styles/: globals.css
web/ui/src/types/: index.ts
