[package]
name = "shadowclaude-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["ShadowClaude Team <team@shadowclaude.ai>"]
description = "Core runtime for ShadowClaude - dialogue state machine, session management, and security"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shadowclaude/core"
keywords = ["ai", "llm", "runtime", "security", "cache"]
categories = ["asynchronous", "caching", "authentication"]

[features]
default = ["full"]
full = ["cache-lru", "cache-ttl", "security-audit", "metrics"]
cache-lru = []
cache-ttl = []
security-audit = []
metrics = ["dep:metrics"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
dashmap = "5.5"
metrics = { version = "0.22", optional = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
sha2 = "0.10"
hmac = "0.12"
base64 = "0.21"
once_cell = "1.19"
async-trait = "0.1"
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec", "time"] }
crossbeam = "0.8"
ahash = "0.8"
memchr = "2.7"
regex = "1.10"
indexmap = "2.1"
bytes = "1.5"
smallvec = { version = "1.13", features = ["serde", "const_generics"] }
bitflags = "2.4"
semver = "1.0"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.4"
mockall = "0.12"
fake = { version = "2.9", features = ["derive"] }
claims = "0.7"

[[bench]]
name = "cache_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
