[package]
name = "shadowclaude-ffi"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["ShadowClaude Team <team@shadowclaude.ai>"]
description = "PyO3 bindings for ShadowClaude - Python interoperability layer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shadowclaude/ffi"
keywords = ["python", "pyo3", "ffi", "bindings", "interop"]
categories = ["external-ffi-bindings", "development-tools::ffi"]

[lib]
name = "shadowclaude_ffi"
crate-type = ["cdylib", "rlib"]

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
full = ["async", "numpy", "pandas"]
async = ["pyo3/asyncio"]
numpy = ["dep:numpy"]
pandas = ["numpy"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38", "chrono", "uuid", "indexmap", "eyre"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"], optional = true }
shadowclaude-core = { path = "../shadowclaude-core" }
shadowclaude-runtime = { path = "../shadowclaude-runtime" }
shadowclaude-protocol = { path = "../shadowclaude-protocol" }
numpy = { version = "0.20", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-pyobject = "0.3"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
once_cell = "1.19"
parking_lot = "0.12"
crossbeam = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
indexmap = { version = "2.1", features = ["serde"] }
libc = "0.2"
memoffset = "0.9"

[dev-dependencies]
pyo3 = { version = "0.20", features = ["auto-initialize"] }
pythonize = "0.20"
insta = { version = "1.34", features = ["yaml", "redactions"] }
pretty_assertions = "1.4"

[build-dependencies]
pyo3-build-config = "0.20"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
