[package]
name = "shadowclaude-protocol"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["ShadowClaude Team <team@shadowclaude.ai>"]
description = "WebSocket and MCP protocol implementation for ShadowClaude"
license = "MIT OR Apache-2.0"
repository = "https://github.com/shadowclaude/protocol"
keywords = ["websocket", "mcp", "protocol", "serialization", "streaming"]
categories = ["network-programming", "asynchronous"]

[features]
default = ["full"]
full = ["websocket", "mcp", "tls", "compression", "metrics"]
websocket = ["tokio-websockets", "fastwebsockets"]
mcp = []
tls = ["tokio-rustls", "rustls-pemfile", "webpki-roots"]
compression = ["flate2", "brotli", "zstd"]
metrics = ["dep:metrics"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "time"] }
tungstenite = { version = "0.21", features = ["native-tls", "rustls-tls-webpki-roots"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls", "rustls-tls-webpki-roots"] }
tokio-websockets = { version = "0.7", features = [["server", "client", "fastrand", "sha1_smol"]], optional = true }
fastwebsockets = { version = "0.7", optional = true }
tokio-rustls = { version = "0.25", optional = true }
rustls-pemfile = { version = "2.1", optional = true }
webpki-roots = { version = "0.26", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_repr = "0.1"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
parking_lot = "0.12"
dashmap = "5.5"
bytes = "1.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
http = "1.0"
http-body = "1.0"
http-body-util = "0.1"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
flate2 = { version = "1.0", optional = true }
brotli = { version = "3.4", optional = true }
zstd = { version = "0.13", optional = true }
metrics = { version = "0.22", optional = true }
once_cell = "1.19"
smallvec = { version = "1.13", features = ["serde", "const_generics"] }
indexmap = { version = "2.1", features = ["serde"] }
bitflags = "2.4"
semver = "1.0"
regex = "1.10"
memchr = "2.7"
atoi = "2.0"
itoa = "1.0"
ryu = "1.0"
simd-json = { version = "0.13", optional = true }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.4"
mockall = "0.12"
claims = "0.7"
rstest = "0.18"

[[bench]]
name = "protocol_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
